<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addition"
                    android:textColor="#fff"
                    android:onClick="start"
                    android:backgroundTint="#5C0A6A"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imgMotivationalShow"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:visibility="invisible"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/keep_it_up_img"
        android:contentDescription="@string/motivational_image_show"/>
    <TextView
        android:id="@+id/txtFinalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#121010"
        android:backgroundTint="#5C0A6A"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMotivationalShow"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/gameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="playAgain"
        android:text="@string/play_again"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="86dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_blue_bright"
        android:padding="10dp"
        android:text="@string/score_question"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtScore" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="86dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_orange_light"
        android:padding="10dp"
        android:text="@string/timer_30s"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTime" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="2"
        android:visibility="visible"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerTextView">

        <Button
            android:id="@+id/button0"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@android:color/holo_red_light"
            android:onClick="chooseAnswer"
            android:tag="0"
            android:text="@string/button_value_14"
            android:textSize="80sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@android:color/holo_purple"
            android:onClick="chooseAnswer"
            android:tag="1"
            android:text="@string/button_value_14"
            android:textSize="80sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="chooseAnswer"
            android:tag="2"
            android:text="@string/button_value_14"
            android:textSize="80sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_light"
            android:onClick="chooseAnswer"
            android:tag="3"
            android:text="@string/button_value_14"
            android:textSize="80sp" />
    </androidx.gridlayout.widget.GridLayout>
    <TextView
        android:id="@+id/sumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="15dp"
        android:text="@string/button_sum_value_31_7"
        android:textSize="30sp"
        android:background="#B57C7C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/answer_correct_wrong"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayouts" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>